--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 柳七的博客
 subtitle: ''
 description: ''
 keywords:
 author: Junkang
-language: en
+language: zh-CN
 timezone: ''
 
 # URL
