--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -142,8 +142,8 @@ menu_settings:
 
 sidebar:
   # Sidebar Position.
-  #position: left
-  position: right
+  position: left
+  #position: right
 
   # Manual define the sidebar width. If commented, will be default for:
   # Muse | Mist: 320
@@ -237,6 +237,7 @@ chat:
 
 # Automatically excerpt description in homepage as preamble text.
 excerpt_description: true
+
 
 # Read more button
 # If true, the read more button will be displayed in excerpt section.
