--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -106,8 +106,8 @@ creative_commons:
 # Schemes
 #scheme: Muse
 #scheme: Mist
-#scheme: Pisces
-scheme: Gemini
+scheme: Pisces
+#scheme: Gemini
 
 
 # ---------------------------------------------------------------
